--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
   "main": "lib/ndt7.node.js",
   "module": "lib/ndt7.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "check": "prettier --check ."
   },
   "keywords": [],
   "author": "Roberto D'Auria (roberto@measurementlab.net)",
   "license": "Apache 2.0",
   "devDependencies": {
-    "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.8",
-    "@babel/preset-env": "^7.16.11",
+    "@types/node-fetch": "^2.6.1",
+    "@types/ws": "^8.5.3",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "eslint": "^8.12.0",
+    "eslint-import-resolver-typescript": "^2.7.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
     "source-map-loader": "^3.0.1",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
