--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,11 @@
     "lib": ["es2020", "dom"],
     "outDir": "./dist",
     "allowJs": true,
+    "checkJs": true,
     //"noImplicitAny": true
     "sourceMap": true,
     "strict": true
   },
-  "include": ["./src/**/*.ts"],
+  "include": ["./src/**/*"],
   "exclude": ["./node_modules/**"]
 }
